# bed_old

./: Cargo.toml  README.md
src/: config.rs  core.rs  main.rs  textbuffer.rs
src/font/: fontconfig.rs  freetype.rs  harfbuzz.rs  mod.rs
src/syntax/: c.rs  default.rs  markdown.rs  mod.rs  rust.rs  toml.rs
src/types/: color.rs  mod.rs  text.rs
src/ui/: context.rs  fuzzy_popup.rs  glyphrender.rs  mod.rs  prompt.rs  quad.rs  text.rs  textview.rs  textview_tree.rs  types.rs  window.rs
src/ui/font/: direct_write.rs  freetype.rs  harfbuzz.rs  mod.rs
src/ui/opengl/: error.rs  framebuffer.rs  mod.rs  shader.rs  texture.rs  vert_array.rs
src/ui/opengl/shader_src/: shadow.frag
